--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "description": "",
   "dependencies": {
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "path": "^0.12.7",
